@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts_Graph: Further graphing improvements
+
 Phoronix Test Suite 5.2 Milestone 4
 29 May 2014
 
